# AGHIoT

./: LICENSE  README.md
arduino/esp32_aws/: esp32_aws.ino
arduino/esp32_http/: esp32_http.ino
esp-idf/: tool_set_config.json
esp-idf/.metadata/: .lock_info  version.ini
esp-idf/.metadata/.plugins/org.eclipse.cdt.core/: HTTPClient1.1760805067483.pdom  WiFiclient.1760784099420.pdom  firstapp.1760783163913.pdom
esp-idf/.metadata/.plugins/org.eclipse.core.resources/: 5.snap
esp-idf/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
esp-idf/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
esp-idf/.metadata/.plugins/org.eclipse.epp.mpc.ui/: dialog_settings.xml
esp-idf/.metadata/.plugins/org.eclipse.launchbar.ui/: dialog_settings.xml
esp-idf/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
esp-idf/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
esp-idf/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
esp-idf/HTTPClient1/: .clangd  .cproject  .project  sdkconfig
esp-idf/HTTPClient1/main/: main.c
esp-idf/I2C-BMP280/: .cproject  .project  CMakeLists.txt  sdkconfig.old
esp-idf/I2C-BMP280/main/: main.c
esp-idf/MQTT-AWS/: CMakeLists.txt
esp-idf/MQTT-AWS/main/: main.c  prog.java
esp-idf/UART/: .cproject  .project  CMakeLists.txt
esp-idf/UART/main/: CMakeLists.txt  main.c
esp-idf/firstapp/: .clangd  .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
esp-idf/firstapp/main/: main.c
esp-idf/wifi_template_main/: main.c
mPython/: connect.py
(+27 files in other folders)
